第一页框架完成

--- a/style/index.css
+++ b/style/index.css
@@ -1,37 +1,23 @@
+/* 第一个页面动画 */
+@import './onePage.css';
+
 .swiper-wrapper > div:nth-child(2){
     background: url('../images/bg1.png') center center / cover no-repeat;
     padding-top: 51vh;
 }
+
 .swiper-slide {
     position: relative;
-}
-.head-img {
-    background: url('../images/head.png') center center / cover no-repeat;
-    width: 90px;
-    height: 90px;
-    position: absolute;
-    top: 10vh;
-    left: 50%;
-    margin-left: -45px;
-    transform: rotate(90deg);
-    border-radius: 50%;
-}
-.row {
-    color: rgb(243, 241, 241);
-    text-align: center;
-    font-size: 16px;
-    margin: 10px auto;
     overflow: hidden;
-    padding-left: 28vw;
 }
 
-.row span:nth-child(1){
-    margin-right: 10px;
-    float: left;
+.swiper-slide::after {
+    width: 20px;
+    height: 20px;
+    display: block;
+    background-color: rgb(10, 5, 5);
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
-.row span:nth-child(2) {
-    float: left;
-}
-
-/* 第一个页面动画 */
