--- a/modules/index/style/index.css
+++ b/modules/index/style/index.css
@@ -17,7 +17,6 @@
     height: 50px;
     line-height: 48px;
     text-align: center;
-    color: #fffefe;
     position: relative;
 }
 
@@ -30,4 +29,8 @@
     right: 0;
     top: 16px;
     background: url(../images/index-nav-divide.png) repeat-y;
+}
+
+.index-header li a {
+    color: #fffefe;
 }
